# code

./: README  mysql_create_user.sh  pidfork.sh  resolv.py
LoadShellcode/: LoadShellcode.cbp  main.c
ThreatDragonModels/test threat model/: test threat model.json
WindowsSnippets/: WindowsSnippets.sln
WindowsSnippets/ActiveWindow/: ActiveWindow.cpp  ActiveWindow.vcxproj  ActiveWindow.vcxproj.filters  stdafx.cpp
WindowsSnippets/Crash/: Crash.cpp  Crash.vcxproj  Crash.vcxproj.filters  stdafx.cpp
WindowsSnippets/EnumDesktops/: EnumDesktops.cpp  EnumDesktops.vcxproj  EnumDesktops.vcxproj.filters  stdafx.cpp
WindowsSnippets/LookupPrivilege/: LookupPrivilege.cpp  LookupPrivilege.vcxproj  LookupPrivilege.vcxproj.filters  stdafx.cpp
WindowsSnippets/MonitorDesktopSwitch/: MonitorDesktopSwitch.cpp  MonitorDesktopSwitch.vcxproj  MonitorDesktopSwitch.vcxproj.filters  stdafx.cpp
adventofcode/2024/AdventOfCode2024/: AdventOfCode2024.sln
ctf/csaw2014/exploit500/: client.py
ctf/naga3/: rtvtrace.py
ctf/nosuchcon2013/naga3/: README.md  brute_address.py  (+6 more)
labs/algorithms/binarytree/: CMakeLists.txt  binarytree.cc  binarytree.h  binarytree_unittest.cc  build.ninja  test.cc
ossec/: ossec-syscheck-listfiles.rb
re/: py2exe_dump_PYTHONSCRIPT.py
re/LoadShellcode/: LoadShellcode.layout  README
re/binaryninja/: nes_mapper4.py
re/pefile_scripts/: pe_dll_to_exe.py  pe_strip_overlay.py
sec/: filefuzzer.c
sec/radare2-fuzzing/: rabin2-crash-0705.elf
sec/tcp_streams_dump/: CMakeLists.txt  main.cpp
sec/tcp_streams_dump/data/: capture.pcap
sico/: README  SICemu.rb  sic.rb
sico/doc/: created.rid  fr_class_index.html  fr_file_index.html  fr_method_index.html  index.html
sico/tests/: jump.sic  run_object.rb  sico.rb  test.sic  test.sico
(+109 files in other folders)
